# garf

./: .gitignore  .pre-commit-config.yaml  .projections.json  404.html  README.md  generate-protos.sh  index.html  mkdocs.yml  sitemap.xml
libs/community/: README.md  pyproject.toml
libs/community/google/ads/: pyproject.toml
libs/community/google/ads/examples/: budget_history.sql  campaigns.sql
libs/community/google/ads/examples/basic/: bids.sql  budgets.sql  campaign_geo_targets.sql  campaigns.sql
libs/community/google/ads/examples/builtin/: ocid_mapping.sql  target_cpa_history.sql  target_roas_history.sql
libs/community/google/ads/examples/policy/: ad_group_ad_asset_policy_info.sql  ad_group_ad_policy_info.sql  ad_group_asset_policy_info.sql  campaign_asset_policy_info.sql  customer_asset_policy_info.sql
libs/community/google/ads/garf_google_ads/: parsers.py  query_editor.py  report_fetcher.py
libs/community/google/ads/garf_google_ads/builtins/: ocid_mapping.py
libs/community/google/ads/tests/unit/: test_query_editor.py  test_simulator.py
libs/community/google/ads/tests/unit/builtins/: test_change_history.py
libs/community/google/analytics/: README.md  pyproject.toml
libs/community/google/analytics/examples/: sample.sql
libs/community/google/analytics/tests/unit/: test_api_client.py  test_query_editor.py
libs/community/google/bid-manager/: README.md  pyproject.toml
libs/community/google/bid-manager/examples/: standard.sql  youtube_id_mapping.sql  youtube_performance.sql
libs/community/google/bid-manager/garf_bid_manager/: __init__.py  api_clients.py  query_editor.py  report_fetcher.py
libs/community/google/bid-manager/tests/unit/: test_api_clients.py  test_query_editor.py
libs/community/google/campaign-manager/: README.md  pyproject.toml
libs/community/google/campaign-manager/examples/: floodlight.sql  reach.sql  standard.sql
libs/community/google/knowledge-graph/: README.md  pyproject.toml
libs/community/google/knowledge-graph/examples/: entity.sql  ids.sql
libs/community/google/knowledge-graph/garf_knowledge_graph_api/: api_clients.py  query_editor.py  report_fetcher.py
libs/community/google/merchant/: pyproject.toml
libs/community/google/merchant/garf_merchant_api/: __init__.py  api_clients.py  exceptions.py  fake_api_response.json  query_editor.py  report_fetcher.py
libs/community/google/youtube/: README.md  pyproject.toml
libs/community/google/youtube/examples/: README.md
libs/community/google/youtube/examples/youtube-data-api/: channel_commentaries.sql  channel_info.sql  channel_videos.sql  commentaries.sql  video_dimensions.sql  video_info.sql
libs/community/google/youtube/examples/youtube-reporting-api/: channel_statistics.sql
libs/community/google/youtube/tests/e2e/: test_lib.py
libs/community/google/youtube/tests/unit/: test_report_fetcher.py  test_simulator.py
libs/community/google/youtube/youtube-data-api/: test_youtube.py
libs/community/google/youtube/youtube-data-api/examples/: README.md  channel_videos.sql
libs/community/google/youtube/youtube-data-api/garf_youtube_data_api/: api_clients.py  report_fetcher.py
libs/community/google/youtube/youtube-reporting-api/garf_youtube_reporting_api/: api_clients.py  report_fetcher.py
libs/community/prometheus/: README.md  pyproject.toml
libs/community/prometheus/examples/: scape.sql  up.sql  up_range.sql
libs/community/prometheus/garf/community/prometheus/: __init__.py  api_clients.py  exceptions.py  query_editor.py  report_fetcher.py  telemetry.py
libs/garf_community/google/dv360/: README.md  pyproject.toml
libs/garf_community/google/dv360/garf_dv360_api/: api_clients.py  exceptions.py  query_editor.py  report_fetcher.py
(+469 files in other folders)
