[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garf-prometheus"
dependencies = [
  "garf-core[pandas]>=1.1.2",
  "garf-io>=1.0.0",
]
authors = [
  {name = "Andrei Markin", email = "amarkin@google.com"},
  {name = "Google Inc. (gTech gPS CSE team)", email = "no-reply@google.com"},
]
license = {text = "Apache 2.0"}
requires-python = ">=3.9"
description = "Garf implementation for Prometheus API"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

dynamic=["version"]

[tool.setuptools.dynamic]
version = {attr = "garf.community.prometheus.version.__version__"}

[project.entry-points.garf]
prometheus = "garf.community.prometheus.report_fetcher"

[project.optional-dependencies]
test =  [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "python-dotenv",
]
[tool.setuptools.packages.find]
where = ["."]
include=["garf.*"]
