[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "garf-dv360-api"
dependencies = [
  "garf-core",
  "garf-io",
  "google-shopping-dv360-reports",
]
authors = [
  {name = "Google Inc. (gTech gPS CSE team)", email = "no-reply@google.com"},
]
license = {text = "Apache 2.0"}
requires-python = ">=3.8"
description = "Garf implementation for Display & Video 360 API"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

dynamic=["version"]

[tool.setuptools.dynamic]
version = {attr = "garf_dv360_api.__version__"}

[project.entry-points.garf]
dv360-api = "garf_dv360_api.report_fetcher"

[options.extras_require]
test =  [
  "pytest",
  "pytest-cov",
  "python-dotenv",
]
